--- a/src/app/calendar/calendar.html
+++ b/src/app/calendar/calendar.html
@@ -1,1 +1,197 @@
-<p>calendar works!</p>
+<!-- Toolbar -->
+<link rel="stylesheet" href="https://naologic-com-assets.naologic.com/fonts/circular-std/circular-std.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+<main class="main">
+    <mat-grid-list cols="5" rowHeight="57px">
+  <mat-grid-tile
+  [colspan]=5
+      [rowspan]=1
+  >
+  <div class="logo"></div>
+</mat-grid-tile>
+  <mat-grid-tile
+   [colspan]=5
+      [rowspan]=2
+      
+  >
+  <div class="head">
+<h1>Work Orders</h1>
+
+</div>
+</mat-grid-tile>
+  <mat-grid-tile
+  [colspan]=5
+      [rowspan]=1 style="overflow: visible;"
+  >
+<div class="zoom">
+    <div class="timescale">
+        Timescale
+    </div>
+    
+  
+<ng-select
+  [items]="TimeScale"
+  bindLabel="name"
+  bindValue="id"
+  [(ngModel)]="selectedScale"
+  [searchable]="false"
+  [clearable]="false"
+  class="work-order-select"
+  (ngModelChange)="setView($event)"
+>
+</ng-select>
+
+
+</div>
+</mat-grid-tile>
+
+ <mat-grid-tile
+  [colspan]=5
+      [rowspan]=10
+      
+  >
+<body class="body">
+
+
+<!-- Timeline -->
+<div
+  class="timeline-container"
+  #scrollContainer
+  (scroll)="onTimelineScroll($event)"
+>
+  <table class="timeline-table" [ngClass]="viewMode">
+
+    <!-- Header -->
+    <thead>
+      <tr>
+        <th class="sticky-col">
+          <div style="position: absolute;left: 30px; top: 5%;">Work Center</div>
+        </th>
+
+        <th *ngFor="let unit of timelineUnits" class="t-header"  [style.minWidth.px]="getcolumnWidth()"
+  [style.width.px]="getcolumnWidth()">
+          <ng-container [ngSwitch]="viewMode">
+            <span *ngSwitchCase="'month'">
+              {{ unit | date:'MMM yyyy' }}
+            </span>
+
+            <span *ngSwitchCase="'week'">
+              W{{ unit | date:'w' }}
+            </span>
+
+            <span *ngSwitchCase="'day'">
+              {{ unit | date:'dd MMM' }}
+            </span>
+          </ng-container>
+        </th>
+           <div
+          class="current-day-line"
+           *ngIf="showCurrentTime"
+  
+  [style.left.px]="getCurrentTimePosition()">
+        </div>
+      </tr>
+    </thead>
+
+    <!-- Body -->
+  <tbody>
+  <tr
+    *ngFor="let wc of displayRows"
+    class="work-center-row"
+  >
+    <!-- Sticky work center label -->
+    <td class="sticky-col wc-label" [class.disabled]="!wc.id">
+      {{ wc.name || '' }}
+    </td>
+
+    <!-- Timeline area (spans all units) -->
+    <td
+      class="timeline-row"
+      [attr.colspan]="timelineUnits.length"
+
+    >
+      <!-- Grid background -->
+      <div class="timeline-grid">
+        <div
+          class="timeline-cell"
+          *ngFor="let unit of timelineUnits"
+          (click)="wc.id"
+          [style.minWidth.px]="getcolumnWidth()"
+  [style.width.px]="getcolumnWidth()"
+        >
+    
+    </div>
+      </div>
+
+      <!-- Work orders overlay -->
+      <div class="row-overlay">
+          <div
+            class="work"
+            *ngFor="let work of getWorkOrdersForCenter(wc.id)"
+            [style.left.px]="getCurrentPosition()"
+            [style.background]="getStatusColor(work, 0.3)"
+            [style.width]="(getLength(work)  * getcolumnWidth()) + 'px '"
+            [style.transform]="'translate(' + ((getPadding(work) * getcolumnWidth())  ) + 'px, ' + 0 + 'px)'"
+          
+          >
+            <div style="color: black">{{ work.name}}</div>
+            <div
+              style="
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+                width: 120px;
+              "
+            >
+              <div
+                class="status-bar"
+                [style.background]=""
+                [style.color]=""
+                 [style.background]="getStatusColor(work, 0.5)"
+                [style.color]="getStatusColor(work, 1)"
+                [title]="work.status"
+                
+              >
+             {{work.status}}
+              </div>
+
+              <button  class="action-btn"  [matMenuTriggerFor]="beforeMenu">
+                <i class="bi bi-three-dots"></i>
+                  <mat-menu
+                #beforeMenu="matMenu"
+                class="menu"
+                xPosition="after"
+                yPosition="below"
+                overlapTrigger="false"
+              >
+                <button mat-menu-item>
+                  <i class="bi bi-pencil"></i>
+                  Edit
+                </button>
+
+                <button mat-menu-item class="text-danger">
+                  <i class="bi bi-trash"></i>
+                  Delete
+                </button>
+              </mat-menu>
+              </button>
+            
+            </div>
+          </div>
+      </div>
+    </td>
+  </tr>
+</tbody>
+
+  </table>
+
+</div>
+
+<!-- Selected cell info (optional, for now/debugging) -->
+
+</body>
+</mat-grid-tile>
+ 
+</mat-grid-list>
+
+</main>
