--- a/src/app/slide-form/slide-form.html
+++ b/src/app/slide-form/slide-form.html
@@ -1,4 +1,6 @@
-<!-- Overlay -->
+<!--
+  @upgrade: Populated workorder progress to match design.
+-->
 <div class="overlay" *ngIf="isOpen" @fade (click)="closeForm()"></div>
 
 <!-- Slide Form Panel -->
